--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Long+Cang&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/9982bffe41.js" crossorigin="anonymous"></script>
     </head>
 
 <body>
@@ -17,8 +18,7 @@
         <div class="container">
             <a class="web-name" href="https://mmweb.netlify.app/">MM web</a>
             <div class="buttons">
-                <a class="download" href="#">Downloads</a>
-                <a class="about" href="#">About</a>
+                <a class="download" href="/downloads.html">Downloads</a>
             </div>
         </div>
     </div>
@@ -57,6 +57,12 @@
 
                 <div class="text2">here is my <strong>Youtube</strong> channel!</div>
             </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="social">
+            <a href="https://discord.com/invite/utBYE28"><i class="fab fa-discord"></i></a>
         </div>
     </div>
 
