--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Long+Cang&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9982bffe41.js" crossorigin="anonymous"></script>
-    </head>
+    <link rel="icon" href="mm.png" type="image/png"/>
+    <meta name="description" content="Welcome to my website!">
+</head>
 
 <body>
     <div class="header">
