--- a/downloads.html
+++ b/downloads.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="/css/downloads.css">
         <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Long+Cang&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/9982bffe41.js" crossorigin="anonymous"></script>
+        <link rel="icon" href="mm.png" type="image/png"/>
+        <meta name="description" content="Welcome to my website!">
     </head>
     <body>
         <div class="header">
