--- a/downloads.html
+++ b/downloads.html
@@ -16,7 +16,8 @@
             <div class="container">
                 <a class="web-name" href="https://mmweb.netlify.app/">MM web</a>
                 <div class="buttons">
-                    <a class="download" href="#">Downloads</a>
+                    <a class="download" href="/downloads.html">Downloads</a>
+                    <a href="/other.html" class="other"></a>
                 </div>
             </div>
         </div>
