--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a class="web-name" href="https://mmweb.netlify.app/">MM web</a>
             <div class="buttons">
                 <a class="download" href="/downloads.html">Downloads</a>
+                <a href="/other.html" class="other">Other</a>
             </div>
         </div>
     </div>
